# cfo

./: .dockerignore  .env.example  .env.template  .gitignore  .gitignore.new  .vercelignore  COMPLETE_TASK_CHECKLIST.md  Dockerfile.api  Dockerfile.frontend  FINAL_STATUS_REPORT.md  FINANCIAL_CONTROL_BLUEPRINT.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_GUIDE.md  MULTI_TENANT_GUIDE.md  Makefile  OPEN_FINANCE_SETUP.md  PHASE_13_IMPLEMENTATION.md  PHASE_14_BROWSER_AUTOMATION.md  PHASE_9_COMPLETION.md  PRODUCTION_FIXES_SUMMARY.md  PROJECT_COMPLETION_SUMMARY.md  QUICK_REFERENCE.md  README.md  SUMIT_MODULE_COVERAGE.md  SYSTEM_COMPLETION_SUMMARY.md  create_admin.py  docker-compose.yml  install.sh  make_executable.sh  pyproject.toml  quickstart.sh  requirements-full.txt  requirements.txt  setup.py  setup.sh  skills-lock.json  vercel.json
.github/: copilot-instructions.md
.playwright-mcp/: page-2026-06-11T10-43-57-768Z.yml  page-2026-06-11T10-51-43-750Z.yml  page-2026-06-11T10-52-24-810Z.yml  page-2026-06-11T10-53-06-388Z.yml  page-2026-06-11T10-53-29-617Z.yml  page-2026-06-11T10-53-44-859Z.yml
alembic/: env.py
api/: index.py
docker/: env.docker.example  nginx.conf
docs/: AUTH_ROADMAP.md  BOOKKEEPER_ARMY_OPERATING_MODEL.md  DATABASE_MAP.md  DOCKER_LOCAL.md  OPEN_FINANCE_API_GUIDE.md  OPEN_FINANCE_API_REFERENCE.md  OPEN_FINANCE_KNOWLEDGE_BASE.md  OPEN_FINANCE_PROVIDER_COVERAGE.md  PERMISSIONS.md  PHASE13_VERIFIED_BUG_SCAN.md  PRODUCTION_READINESS.md  PRODUCT_AUDIT_AND_ROADMAP.md  PROJECT_STATUS.md  RELEASE_0.2.0.md  RESEARCH_FINANCE_SYSTEMS_BENCHMARK.md  WORKFLOW_AUDIT.md  (+13 more)
(+491 files in other folders)
