[project]
name = "app"
version = "0.2.0"
dependencies = [ "python-dotenv==1.0.0", "pydantic==2.5.0", "pydantic-settings==2.1.0", "email-validator==2.1.0.post1", "passlib[bcrypt]==1.7.4", "bcrypt==4.0.1", "python-jose[cryptography]==3.3.0", "python-multipart==0.0.6", "sqlalchemy==2.0.23", "alembic==1.13.1", "psycopg[binary]==3.2.9", "fastapi==0.108.0", "uvicorn[standard]==0.25.0", "httpx==0.26.0", "pandas==2.1.4", "numpy==1.26.2", "openpyxl==3.1.2", "reportlab==4.0.7", "matplotlib==3.8.2", "click==8.1.7", "rich==13.7.0", "openai==1.6.1", "anthropic==0.40.0", "pypdfium2==4.30.0", "Pillow==11.3.0", "pytest==7.4.3", "pytest-asyncio==0.23.2", "pytest-cov==4.1.0", "python-dateutil==2.8.2", "pytz==2023.3" ]
requires-python = "~=3.12.0"
